--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import './src/styles/global.css';
+import '../styles/global.css';
 import { Image } from 'astro:assets';
 
 const images = import.meta.glob('/public/gallery/*.{png,jpg,jpeg,gif,webp}', {
