--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,6 +22,10 @@ const imageList = Object.entries(images).map(([path, module]) => ({
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
         <title>pawjob</title>
+        <meta property="og:title" content="pawjob.dev">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://pawjob.dev">
+		<meta property="og:description" content="pawjob.dev wgat it is">
     </head>
     <body class="bg-black flex items-center p-8 flex-col gap-4">
         <h1 class="animate-rainbow font-extrabold" style="font-size: 4rem; line-height: 1.5;">pawjob.dev</h1>
