--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ const imageList = Object.entries(images).map(([path, module]) => ({
                 />
             ))}
         </div>
-        <p class="text-3xl text-white">contact circular@pawjob.dev if you want to add an image</p>
+        <p class="text-3xl text-white">contact circular@pawjob.dev if you want to add an image or open a PR</p>
         <a class="text-3xl text-white" href="https://github.com/circularsprojects/pawjob.dev">this site is open source on github</a>
     </body>
 </html>
