--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ const imageList = Object.entries(images).map(([path, module]) => ({
 		<meta property="og:url" content="https://pawjob.dev">
 		<meta property="og:description" content="pawjob.dev wgat it is">
     </head>
-    <body class="bg-black flex items-center p-8 flex-col gap-4">
+    <body class="bg-black flex items-center p-8 flex-col gap-4 text-center">
         <h1 class="animate-rainbow font-extrabold" style="font-size: 4rem; line-height: 1.5;">pawjob.dev</h1>
         <p class="text-3xl text-white">the gallery</p>
         <div class="columns-1 sm:columns-2 md:columns-3 lg:columns-4 gap-4 p-4 [&>*]:mb-4">
